comment filters for habitats, fix z-index for filters on species list

--- a/src/components/manage/Blocks/SiteHabitatsList/style.less
+++ b/src/components/manage/Blocks/SiteHabitatsList/style.less
@@ -91,6 +91,7 @@ div#view .site-habitats-list .habitats-list .ui.container > * {
 
       &.right.visible {
         box-shadow: 0px 0px 13px -5px #000000;
+        z-index: 800;
       }
 
       .sidebar-header {
