--- a/src/components/manage/Blocks/SiteSpeciesList/style.less
+++ b/src/components/manage/Blocks/SiteSpeciesList/style.less
@@ -90,6 +90,7 @@ div#view .site-species-list .species-list .ui.container > * {
 
       &.right.visible {
         box-shadow: 0px 0px 13px -5px #000000;
+        z-index: 800;
       }
 
       .sidebar-header {
